syntax = "proto2";

package tibia.protobuf.shared;

message Coordinate {
    optional uint32 x = 1;
    optional uint32 y = 2;
    optional uint32 z = 3;
}

enum PLAYER_ACTION {
    PLAYER_ACTION_NONE = 0;
    PLAYER_ACTION_LOOK = 1;
    PLAYER_ACTION_USE = 2;
    PLAYER_ACTION_OPEN = 3;
    PLAYER_ACTION_AUTOWALK_HIGHLIGHT = 4;
}

enum ITEM_CATEGORY {
    ITEM_CATEGORY_ARMORS = 1;
    ITEM_CATEGORY_AMULETS = 2;
    ITEM_CATEGORY_BOOTS = 3;
    ITEM_CATEGORY_CONTAINERS = 4;
    ITEM_CATEGORY_DECORATION = 5;
    ITEM_CATEGORY_FOOD = 6;
    ITEM_CATEGORY_HELMETS_HATS = 7;
    ITEM_CATEGORY_LEGS = 8;
    ITEM_CATEGORY_OTHERS = 9;
    ITEM_CATEGORY_POTIONS = 10;
    ITEM_CATEGORY_RINGS = 11;
    ITEM_CATEGORY_RUNES = 12;
    ITEM_CATEGORY_SHIELDS = 13;
    ITEM_CATEGORY_TOOLS = 14;
    ITEM_CATEGORY_VALUABLES = 15;
    ITEM_CATEGORY_AMMUNITION = 16;
    ITEM_CATEGORY_AXES = 17;
    ITEM_CATEGORY_CLUBS = 18;
    ITEM_CATEGORY_DISTANCE_WEAPONS = 19;
    ITEM_CATEGORY_SWORDS = 20;
    ITEM_CATEGORY_WANDS_RODS = 21;
    ITEM_CATEGORY_PREMIUM_SCROLLS = 22;
    ITEM_CATEGORY_TIBIA_COINS = 23;
    ITEM_CATEGORY_CREATURE_PRODUCTS = 24;
}

enum PLAYER_PROFESSION {
    PLAYER_PROFESSION_ANY = -1;
    PLAYER_PROFESSION_NONE = 0;
    PLAYER_PROFESSION_KNIGHT = 1;
    PLAYER_PROFESSION_PALADIN = 2;
    PLAYER_PROFESSION_SORCERER = 3;
    PLAYER_PROFESSION_DRUID = 4;
    PLAYER_PROFESSION_PROMOTED = 10;
}

enum ANIMATION_LOOP_TYPE {
    ANIMATION_LOOP_TYPE_PINGPONG = -1;
    ANIMATION_LOOP_TYPE_INFINITE = 0;
    ANIMATION_LOOP_TYPE_COUNTED = 1;
}

enum HOOK_TYPE {
    HOOK_TYPE_SOUTH = 1;
    HOOK_TYPE_EAST = 2;
}
